@@ -2,7 +2,8 @@ package me.harry0198.infoheads.spigot.util;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Scanner;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Consumer;
@@ -10,7 +11,7 @@ import java.util.logging.Logger;
 
 public final class UpdateChecker {
 
-    private final static Logger LOGGER = Logger.getLogger(UpdateChecker.class.getName());
+    private static final Logger LOGGER = Logger.getLogger(UpdateChecker.class.getName());
     private final int resourceId;
 
     public UpdateChecker(int resourceId) {
@@ -19,11 +20,11 @@ public final class UpdateChecker {
 
     public void getVersion(final Consumer<String> consumer) {
         CompletableFuture.runAsync(() -> {
-            try (InputStream inputStream = new URL("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId).openStream(); Scanner scanner = new Scanner(inputStream)) {
+            try (InputStream inputStream = new URI("https://api.spigotmc.org/legacy/update.php?resource=" + this.resourceId).toURL().openStream(); Scanner scanner = new Scanner(inputStream)) {
                 if (scanner.hasNext()) {
                     consumer.accept(scanner.next());
                 }
-            } catch (IOException exception) {
+            } catch (IOException | URISyntaxException exception) {
                 LOGGER.info("Cannot look for updates: " + exception.getMessage());
             }
         });
